src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotation_snapshots__annotation_branching_zoom_3.snap
---
source: src/views/gen_graph_widget.rs
expression: snapshot
---
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                      ╭─ACGTACGTACGTACGTACGTAC─╮                                                              "
"                      │⡖════════coding════════⢲│                                                              "
"                      │    ◀═══nested═════     │                                                              "
"  ╟──ACGTACGTACGTACGT─┤                        ├─ACGTACGTACGTACGT──ACGTACGTAC──╢                              "
"           ══════════⠚┊                        │⠓════════▶  ═════⠒⠒═══tail═══                                 "
"               ◀═════⠒┊⢤⡀                    ⢀⡤│⠒══════                                                       "
"                      ╰╌╌╌╌╌╌ACGTACGTACGT──────╯                                                              "
"                          ⠉⠓⠒══reverse═══⠒⠚⠉                                                                  "
"                             site ▶                                                                           "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
