src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotation_snapshots__annotation_branching_zoom_5.snap
---
source: src/views/gen_graph_widget.rs
expression: snapshot
---
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                             ╭╌╌╌╌╌╌ACGTACGTACGT──────╮                                                       "
"                             ┊    ⢀⠤══reverse═══⠤⡀    │                                                       "
"                             ┊   ⡠⠃ site ▶       ⠘⢄   │                                                       "
"                             ┊  ⢰⠁                ⠈⢆  │                                                       "
"                             ┊  ⡇                  ⠈⡆ │                                                       "
"  ╟─────────ACGTACGTACGTACGT─╮⢀⠜                    ⠸⡀├─ACGTACGTACGTACGT─────────ACGTACGTAC─────────╢         "
"                  ══════════⢄│⠊                      ⠑│⡠════════▶  ═════⠒⠒⠒⠒⠒⠒⠒⠒⠒═══tail═══                   "
"                      ◀═════⢺│                        │⠗══════                                                "
"                            ⠈│                        │                                                       "
"                             │                        │                                                       "
"                             ╰─ACGTACGTACGTACGTACGTAC─╯                                                       "
"                              ⠑════════coding════════⠊                                                        "
"                                  ◀═══nested═════                                                             "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
