src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotation_snapshots__annotation_connector_curves.snap
---
source: src/views/gen_graph_widget.rs
expression: terminal.backend().to_string()
---
"                                                                  "
" ═⠒⠒⠒⠢⠤⢄⣀                                             ⣀⡠⠤⠔⠒⠒⠒═    "
"        ⠈⠉⠲⢄⡀                                     ⢀⡠⠖⠉⠁           "
"            ⠙⠲⣄                                 ⣠⠖⠋               "
"              ⠈⠓⢦⡀                           ⢀⡴⠚⠁                 "
"                 ⠈⠓⠤⣄⡀                   ⢀⣠⠤⠚⠁                    "
"                     ⠈⠉⠑⠒⠒⠒═       ═⠒⠒⠒⠊⠉⠁                        "
"                                                                  "
"                                                                  "
" ═⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒═       ═⠲⡀         ═⡆                 "
"                                     ⢣          ⡇                 "
"                                     ⠸⡀         ⢇                 "
"  ⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒│⠒⠒⠒⠒A⠒⠒⠒⠒⠒⠒⠒           ⡇         ⢸                 "
"                                      ⢱         ⢸                 "
"                                       ⠓═       ⠘═                "
"                                                                  "
