src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotation_snapshots__annotation_hbb_vcf.snap
---
source: src/views/gen_graph_widget.rs
expression: "render_annotated_variant_fixture(\"hbb_reference_centering\", \"hbb_region.fa\",\n\"hbb_region.gff3\", \"hbb_variants.vcf\", \"HG00096\", 2600,)"
---
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"  ╭╌A─╮     ╭─G─╮              ╭─A─╮           ╭─C─╮       ╭─G─╮                           ╭─G─╮       ╭─A─╮     ╭─A─╮     ╭─AT─╮   ╭─A─╮   "
"  ┊   │     │   │              │   │           │   │       │   │                           │   │       │   │     │   │     │    │   │   │   "
"G───T─┴─C.A─╯╌T╌╰─TTGCAA.AGGAG─╯╌G╌╰─ATAT.ACTT─┴─A─┴─T.T.G─╯╌C╌╰─CCTGAA.GCAGC.CTGCCC.GTCAG─╯╌A╌╰─T.T.A─╯╌G╌╰─T.C─╯╌G╌╰─G.A─╯╌╌╌╌╰─A─┴─T─┴─A."
"                  <HBB exon 3]   ═   ═HBB-201═   ═   ═════   ═   ═════════════════════════   ═   ══]                                        "
"                  <═══════════                                   <HBB exon 2] <HBB exon 1═   ═   ═════                                      "
"                  ═══════════]                                   ═════════HBB CDS═════════   ═   ══]                                        "
"                                                                              <═══════════                                                  "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
