src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotation_snapshots__annotation_library_branches.snap
---
source: src/views/gen_graph_widget.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"    ╭─TAAT─┬─ATG.AA─╮                                                           "
"    │ [p2> │ [cds3> │                                                           "
"    │      │        │                                                           "
"  ╟─┼─AAAA─┼─ATG.AA─┼─╢                                                         "
"    │ [p1> │ [cds1> │                                                           "
"    │      │        │                                                           "
"    ╰─CAAC─┴─ATG.AA─╯                                                           "
"      [p3>   [cds2>                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
