src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotation_snapshots__annotation_packed_labels.snap
---
source: src/views/gen_graph_widget.rs
expression: snapshot
---
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"  ╟────────────────ACGTACGTACGTACGTACGTACGTACGTACGTACGTACGT──ACG"
"           promoter[>   [═══════gene════════>       [═tag═]     "
"                           <════antisense═════]                 "
"     a_label_too_long_for_either_side[══]    site<              "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
