src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotation_snapshots__annotation_sarscov2_vcf.snap
---
source: src/views/gen_graph_widget.rs
expression: "render_annotated_variant_fixture(\"sarscov2_reference_centering\",\n\"NC_045512.2.fa\", \"NC_045512.2.gff3\", \"lineages.vcf\", \"Delta\", 27650,)"
---
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                            ╭─C─╮                                                    ╭─C─╮       ╭─T─╮                                     ╭"
"                            │   │                                                    │   │       │   │                                     │"
".TTTGTAA.ATGTACTC.GGTCTAA.A─╯╌T╌╰─CGCAATGG.ACAGTAA.ATGTTTCA.TGATTAA.ATGAAAAT.AGATCAG─╯╌T╌╰─T.T.A─╯╌C╌╰─ATGATTGA.CGCCTAA.ATGAAATT.CATCTAA.A─╯"
"24391.1> [YP_009724392.1> ═   ═   ══════════════════════════════════════════════════   ═   ═════   ═   ═══>             [YP_009724396.1> ═  "
"═══════════════════════════   ═   ═YP_009724393.1> [YP_009724394.1> [YP_009724395.1═   ═   ═════   ═   ═══>             [═════ORF8═════> ═  "
"3a═════> [══════E═══════> ═   ═   ═══════M═══════> [═════ORF6═════> [════ORF7a══════   ═   ═════   ═   ═══════════════════════════════════  "
"                                                                                                       [════ORF7b═════>                     "
"                                                                                                       [YP_009725318.1>                     "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
