src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotation_snapshots__annotation_simple_unknown.snap
---
source: src/views/gen_graph_widget.rs
expression: snapshot
---
"                                            "
"                                            "
"                                            "
"  ╟──ACGTACGTACGTACGTACGTACGT──ACGT──╢      "
"     [═════════gene═════════]               "
"                                            "
"                                            "
